<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".ui.game.GameFragment">


    <TextView
        android:id="@+id/show_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/thumbnail_height"
        android:fontFamily="sans-serif-black"
        android:text="@string/show_msg_label"
        android:textAlignment="center"
        android:textColor="#0097A7"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/show_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/show_hint_label"
        android:textAlignment="center"
        android:textColor="#689F38"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/show_attempts_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/show_attempts_left_label"
        android:textColor="#D50000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_edit_label"
        android:inputType="number"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        android:textColorHint="#80000000" />

    <Button
        android:id="@+id/btn_guess"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_margin="5dp"
        android:backgroundTint="#555555"
        android:text="@string/btn_guess_label" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_margin="5dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:backgroundTint="#555555"
        android:text="@string/btn_restart_label" />

</LinearLayout>