<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="406dp"
        android:layout_height="271dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/danila_s_photo"
        app:srcCompat="@drawable/photo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/name"
        android:textColor="#3E2723" />

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/group"
        android:textColor="#3E2723"/>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/year"
        android:textColor="#3E2723" />

</LinearLayout>