<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_game">

    <fragment
        android:id="@+id/navigation_game"
        android:name="by.bondarik.guessthenumber.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="by.bondarik.guessthenumber.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="by.bondarik.guessthenumber.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>